--- a/.github/workflows/Docker-workflow.yml
+++ b/.github/workflows/Docker-workflow.yml
@@ -11,5 +11,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Echo Test
-        run: echo this is a test
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+      - name: Clean
+        run: mvn -ntp clean
+      - name: Build
+        run: mvn -ntp compile
+      - name: Short test
+        run: mvn -ntp test -Dtest=CalculatorTest
+      - name: Long test
+        run: mvn -ntp test -Dtest=CalculatorTestThorough
